# OffRL_Preset

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
algorithms/: __init__.py  td3bc.py
config/: td3bc.yaml
offrl/: __init__.py  __main__.py
offrl/cli/: artifacts.py  main.py
offrl/config/: __init__.py
offrl/core/: __init__.py
offrl/data/: __init__.py
offrl/envs/: __init__.py
offrl/models/: __init__.py  actors.py  critics.py  mlp.py
offrl/policy/: __init__.py
